[test] Untie Orchard testing from enrich-classpath